--- a/ch.acanda.eclipse.pmd.core/build.properties
+++ b/ch.acanda.eclipse.pmd.core/build.properties
@@ -7,4 +7,5 @@ bin.includes = plugin.xml,\
                lib/jaxen-1.1.1.jar,\
                lib/asm-3.2.jar,\
                lib/guava-12.0.jar,\
-               icons/
+               icons/,\
+               lib/rhino-1.7R3.jar
