Support multiple PMD configurations
Support multiple PMD configurations. The configurations are available to
all projects in the workspace and can be activated individually for each
project.

--- a/ch.acanda.eclipse.pmd.core/plugin.xml
+++ b/ch.acanda.eclipse.pmd.core/plugin.xml
@@ -46,7 +46,7 @@
             type="org.eclipse.core.resources.problemmarker">
       </super>
       <persistent
-            value="false">
+            value="true">
       </persistent>
    </extension>
    <extension
