Add quick fix for ExtendsObject
Add quick fix support and a first quick fix which fixes PMD problems
violating the ExtendsObject rule.

--- a/ch.acanda.eclipse.pmd.core/plugin.xml
+++ b/ch.acanda.eclipse.pmd.core/plugin.xml
@@ -71,5 +71,12 @@
          </enabledWhen>
       </page>
    </extension>
+   <extension
+         point="org.eclipse.ui.ide.markerResolution">
+      <markerResolutionGenerator
+            class="ch.acanda.eclipse.pmd.marker.resolution.PMDMarkerResolutionGenerator"
+            markerType="ch.acanda.eclipse.pmd.core.pmdMarker">
+      </markerResolutionGenerator>
+   </extension>
 
 </plugin>
