--- a/ch.acanda.eclipse.pmd.core/build.properties
+++ b/ch.acanda.eclipse.pmd.core/build.properties
@@ -6,6 +6,6 @@ bin.includes = plugin.xml,\
                lib/pmd-5.0.1.jar,\
                lib/jaxen-1.1.1.jar,\
                lib/asm-3.2.jar,\
-               lib/guava-12.0.jar,\
+               lib/guava-14.0-rc1.jar,\
                icons/,\
                lib/rhino-1.7R3.jar
