Update Tycho to version 0.16
Update Tycho to version 0.16 and activate target validation and parallel
execution of unit tests.

--- a/ch.acanda.eclipse.pmd.target/pom.xml
+++ b/ch.acanda.eclipse.pmd.target/pom.xml
@@ -20,36 +20,32 @@
     </parent>
 
     <groupId>ch.acanda.eclipse.pmd</groupId>
-    <artifactId>target</artifactId>
+    <artifactId>indigo</artifactId>
     <version>0.2.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>eclipse-target-definition</packaging>
     <name>eclipse-pmd target definition</name>
     
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>1.3</version>
-				<executions>
-					<execution>
-						<id>attach-artifacts</id>
-						<phase>package</phase>
-						<goals>
-							<goal>attach-artifact</goal>
-						</goals>
-						<configuration>
-							<artifacts>
-								<artifact>
-									<file>indigo.target</file>
-									<type>target</type>
-									<classifier>indigo</classifier>
-								</artifact>
-							</artifacts>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+            <plugin>
+                <groupId>org.eclipse.tycho.extras</groupId>
+                <artifactId>target-platform-validation-plugin</artifactId>
+                <version>${tycho-extras-version}</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>validate-target-platform</goal>
+                        </goals>
+                        <configuration>
+                            <targetFiles>
+                                <param>indigo.target</param>
+                            </targetFiles>
+                            <failOnError>true</failOnError>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
