--- a/ch.acanda.eclipse.pmd.core.tests/pom.xml
+++ b/ch.acanda.eclipse.pmd.core.tests/pom.xml
@@ -24,4 +24,16 @@
     <packaging>eclipse-test-plugin</packaging>
     <name>eclipse-pmd unit tests</name>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>tycho-surefire-plugin</artifactId>
+                <version>${tycho-version}</version>
+                <configuration>
+                    <parallel>both</parallel>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
