--- a/ch.acanda.eclipse.pmd/pom.xml
+++ b/ch.acanda.eclipse.pmd/pom.xml
@@ -18,7 +18,8 @@
     <name>eclipse-pmd parent</name>
 
     <properties>
-        <tycho-version>0.15.0</tycho-version>
+        <tycho-version>0.16.0</tycho-version>
+        <tycho-extras-version>0.16.0</tycho-extras-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -56,7 +57,7 @@
                     <target>
                         <artifact>
                             <groupId>ch.acanda.eclipse.pmd</groupId>
-                            <artifactId>target</artifactId>
+                            <artifactId>indigo</artifactId>
                             <classifier>indigo</classifier>
                         </artifact>
                     </target>
