--- a/ch.acanda.eclipse.pmd.core/.classpath
+++ b/ch.acanda.eclipse.pmd.core/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry exported="true" kind="lib" path="lib/pmd-5.0.2.jar" sourcepath="lib/pmd-src-5.0.2.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/rhino-1.7R3.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/guava-14.0-rc1.jar" sourcepath="lib/guava-14.0-rc1-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava-14.0.jar" sourcepath="lib/guava-14.0-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/asm-3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxen-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.2.jar"/>
