--- a/ch.acanda.eclipse.pmd.core/build.properties
+++ b/ch.acanda.eclipse.pmd.core/build.properties
@@ -3,10 +3,10 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               lib/pmd-5.0.2.jar,\
                lib/jaxen-1.1.1.jar,\
                lib/asm-3.2.jar,\
                lib/guava-14.0.jar,\
                icons/,\
                lib/rhino-1.7R3.jar,\
-               lib/commons-io-2.2.jar
+               lib/commons-io-2.2.jar,\
+               lib/pmd-5.0.3.jar
