Update PMD to version 5.0.4 and Guava to version 14.0.1

--- a/ch.acanda.eclipse.pmd.core/build.properties
+++ b/ch.acanda.eclipse.pmd.core/build.properties
@@ -5,8 +5,8 @@ bin.includes = plugin.xml,\
                .,\
                lib/jaxen-1.1.1.jar,\
                lib/asm-3.2.jar,\
-               lib/guava-14.0.jar,\
                icons/,\
                lib/rhino-1.7R3.jar,\
                lib/commons-io-2.2.jar,\
-               lib/pmd-5.0.3.jar
+               lib/pmd-5.0.4.jar,\
+               lib/guava-14.0.1.jar
