--- a/ch.acanda.eclipse.pmd.core/.classpath
+++ b/ch.acanda.eclipse.pmd.core/.classpath
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/pmd-5.0.4.jar" sourcepath="lib/pmd-src-5.0.4.zip"/>
-	<classpathentry exported="true" kind="lib" path="lib/rhino-1.7R3.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/guava-14.0.1.jar" sourcepath="lib/guava-14.0.1-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/asm-3.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jaxen-1.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-5.0.5.jar" sourcepath="lib/pmd-5.0.5-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jaxen-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/asm-3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava-15.0-rc1.jar" sourcepath="lib/guava-15.0-rc1-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/rhino-1.7R3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
