--- a/ch.acanda.eclipse.pmd.core/build.properties
+++ b/ch.acanda.eclipse.pmd.core/build.properties
@@ -8,5 +8,5 @@ bin.includes = plugin.xml,\
                icons/,\
                lib/rhino-1.7R3.jar,\
                lib/commons-io-2.2.jar,\
-               lib/pmd-5.0.4.jar,\
-               lib/guava-14.0.1.jar
+               lib/pmd-5.0.5.jar,\
+               lib/guava-15.0-rc1.jar
