--- a/ch.acanda.eclipse.pmd.core/.classpath
+++ b/ch.acanda.eclipse.pmd.core/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/pmd-5.0.5.jar" sourcepath="lib/pmd-5.0.5-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxen-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/asm-3.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/guava-15.0-rc1.jar" sourcepath="lib/guava-15.0-rc1-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava-15.0.jar" sourcepath="lib/guava-15.0-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/rhino-1.7R3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
