--- a/ch.acanda.eclipse.pmd.core/build.properties
+++ b/ch.acanda.eclipse.pmd.core/build.properties
@@ -9,4 +9,4 @@ bin.includes = plugin.xml,\
                lib/rhino-1.7R3.jar,\
                lib/commons-io-2.2.jar,\
                lib/pmd-5.0.5.jar,\
-               lib/guava-15.0-rc1.jar
+               lib/guava-15.0.jar
