--- a/ch.acanda.eclipse.pmd/pom.xml
+++ b/ch.acanda.eclipse.pmd/pom.xml
@@ -11,7 +11,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <version>0.7.0-SNAPSHOT</version>
+    <version>0.8.0-SNAPSHOT</version>
     <groupId>ch.acanda.eclipse.pmd</groupId>
     <artifactId>parent</artifactId>
     <packaging>pom</packaging>
@@ -59,6 +59,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>2.8</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.eclipse.tycho</groupId>
+                    <artifactId>tycho-versions-plugin</artifactId>
+                    <version>${tycho-version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
