Support build on Mac OS
This change adds the -XstartOnFirstThread JVM flag when running the
build on Mac OS so the tests don't fail.

--- a/ch.acanda.eclipse.pmd.core.swtbot/pom.xml
+++ b/ch.acanda.eclipse.pmd.core.swtbot/pom.xml
@@ -46,6 +46,7 @@
                 <configuration>
                     <useUIHarness>true</useUIHarness>
                     <useUIThread>false</useUIThread>
+                    <argLine>${os-jvm-flags}</argLine>
                     <product>org.eclipse.sdk.ide</product>
                     <application>org.eclipse.ui.ide.workbench</application>
                     <dependencies>
