--- a/ch.acanda.eclipse.pmd.core.tests/pom.xml
+++ b/ch.acanda.eclipse.pmd.core.tests/pom.xml
@@ -31,6 +31,7 @@
                 <version>${tycho-version}</version>
                 <configuration>
                     <parallel>both</parallel>
+                    <argLine>${os-jvm-flags}</argLine>
                 </configuration>
             </plugin>
         </plugins>
