Show an alternative property page if JVM version is less than 7
If Eclipse runs on a JVM with version less than 7, the eclipse-pmd
plug-ins will not be started. This change adds another plug-in that
starts if the JVM version is at least 1.3 and shows an alternative
project property page if the JVM version is less than 7. This resolves
#6.

--- a/ch.acanda.eclipse.pmd/pom.xml
+++ b/ch.acanda.eclipse.pmd/pom.xml
@@ -43,8 +43,10 @@
         <module>../ch.acanda.eclipse.pmd.repository</module>
         <module>../ch.acanda.eclipse.pmd.target</module>
         <module>../ch.acanda.eclipse.pmd.core</module>
+        <module>../ch.acanda.eclipse.pmd.unsupported</module>
         <module>../ch.acanda.eclipse.pmd.feature</module>
         <module>../ch.acanda.eclipse.pmd.core.tests</module>
+        <module>../ch.acanda.eclipse.pmd.unsupported.tests</module>
         <module>../ch.acanda.eclipse.pmd.core.swtbot</module>
     </modules>
 
