Add a language attribute to PMD markers
Marker resolution generator extension points can filter markers based on
the new attribute which makes them easier to implement.

--- a/ch.acanda.eclipse.pmd.java/plugin.xml
+++ b/ch.acanda.eclipse.pmd.java/plugin.xml
@@ -6,10 +6,18 @@
       <markerResolutionGenerator
             class="ch.acanda.eclipse.pmd.java.resolution.PMDMarkerResolutionGenerator"
             markerType="ch.acanda.eclipse.pmd.core.pmdMarker">
+         <attribute
+               name="language"
+               value="java">
+         </attribute>
       </markerResolutionGenerator>
       <markerResolutionGenerator
             class="ch.acanda.eclipse.pmd.java.resolution.PMDMarkerResolutionGenerator"
             markerType="ch.acanda.eclipse.pmd.core.pmdLongMarker">
+         <attribute
+               name="language"
+               value="java">
+         </attribute>
       </markerResolutionGenerator>
    </extension>
 
