--- a/ch.acanda.eclipse.pmd.core/build.properties
+++ b/ch.acanda.eclipse.pmd.core/build.properties
@@ -8,5 +8,6 @@ bin.includes = plugin.xml,\
                icons/,\
                lib/rhino-1.7R3.jar,\
                lib/commons-io-2.2.jar,\
+               lib/commons-lang3-3.1.jar,\
                lib/pmd-5.1.1.jar,\
                lib/xercesImpl-2.9.1.jar
