--- a/ch.acanda.eclipse.pmd.core/pom.xml
+++ b/ch.acanda.eclipse.pmd.core/pom.xml
@@ -91,6 +91,11 @@
                                     <artifactId>xercesImpl</artifactId>
                                     <version>2.9.1</version>
                                 </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.commons</groupId>
+                                    <artifactId>commons-lang3</artifactId>
+                                    <version>3.1</version>
+                                </artifactItem>
                             </artifactItems>
                         </configuration>
                     </execution>
