Update version of PMD dependency ASM from 3.2 to 5.0_BETA

--- a/ch.acanda.eclipse.pmd.core/build.properties
+++ b/ch.acanda.eclipse.pmd.core/build.properties
@@ -4,7 +4,7 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                lib/jaxen-1.1.1.jar,\
-               lib/asm-3.2.jar,\
+               lib/asm-5.0_BETA.jar,\
                icons/,\
                lib/rhino-1.7R3.jar,\
                lib/commons-io-2.2.jar,\
