--- a/ch.acanda.eclipse.pmd.core/pom.xml
+++ b/ch.acanda.eclipse.pmd.core/pom.xml
@@ -72,9 +72,9 @@
                                     <version>1.1.1</version>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>asm</groupId>
+                                    <groupId>org.ow2.asm</groupId>
                                     <artifactId>asm</artifactId>
-                                    <version>3.2</version>
+                                    <version>5.0_BETA</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.mozilla</groupId>
