--- a/ch.acanda.eclipse.pmd.core/.classpath
+++ b/ch.acanda.eclipse.pmd.core/.classpath
@@ -10,5 +10,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/rhino-1.7R3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.1.jar"/>
+    <classpathentry exported="true" kind="lib" path="lib/saxon-9.1.0.8-dom.jar"/>
+    <classpathentry exported="true" kind="lib" path="lib/saxon-9.1.0.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
