--- a/ch.acanda.eclipse.pmd.core/build.properties
+++ b/ch.acanda.eclipse.pmd.core/build.properties
@@ -10,4 +10,6 @@ bin.includes = plugin.xml,\
                lib/commons-io-2.2.jar,\
                lib/commons-lang3-3.1.jar,\
                lib/pmd-5.1.2.jar,\
-               lib/xercesImpl-2.9.1.jar
+               lib/xercesImpl-2.9.1.jar,\
+               lib/saxon-9.1.0.8-dom.jar,\
+               lib/saxon-9.1.0.8.jar
