--- a/ch.acanda.eclipse.pmd.core/pom.xml
+++ b/ch.acanda.eclipse.pmd.core/pom.xml
@@ -96,6 +96,17 @@
                                     <artifactId>commons-lang3</artifactId>
                                     <version>3.1</version>
                                 </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.sourceforge.saxon</groupId>
+                                    <artifactId>saxon</artifactId>
+                                    <version>9.1.0.8</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.sourceforge.saxon</groupId>
+                                    <artifactId>saxon</artifactId>
+                                    <version>9.1.0.8</version>
+                                    <classifier>dom</classifier>
+                                </artifactItem>
                             </artifactItems>
                         </configuration>
                     </execution>
